# diffusion-world-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CODEX_HANDOFF.md  claims.md  differentiation_from_best_of_n_wam.md  differentiation_from_prior_projects.md  differentiation_from_wam.md  final_audit.md  reviewer_attacks.md  theory.md
experiments/: run_experiments.py  v3_cached_evidence.py  v4_frozen_evidence.py
paper/: abstract.md  checklist.md  experiments.md  intro.md  limitations.md  method.md  related_work.md  theory.md
paper/final/: diffusion world model-v4-manifest.json
paper_iclr/: main.tex  references.bib  v3_results_macros.tex  v4_results_macros.tex
results/: claims_status.json  claims_status.md  run_summary.json
results/models/: learned_diffusion_world_model.pt  learned_diffusion_world_model_ensemble0.pt  learned_diffusion_world_model_ensemble1.pt  learned_diffusion_world_model_ensemble2.pt  learned_training_summary.json
results/tables/: adaptive_n_metrics.csv  calibration_diagnostics.csv  denoising_grid.csv  exact_law_validation.csv  gap_closure_by_budget.csv  learned_generalization_metrics.csv  learned_metrics.csv  learned_training_curve.csv  main_metrics.csv  pilot_repair_metrics.csv  seed_metrics.csv
scripts/: build_v3_paper.py  build_v4_paper.py  run_all.sh  run_claim_audit.sh  run_smoke.sh  run_v3_claim_audit.py  run_v4_claim_audit.py
src/dwm_best_of_n/: __init__.py  (+7 more)
tests/: test_artifacts_and_claims.py  test_diffusion_world_model.py  test_docs_boundaries.py  test_evaluation.py  test_pilot_repair.py  test_theory.py
(+24 files in other folders)
