[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dwm-best-of-n"
version = "0.1.0"
description = "Best-of-N inference laws for diffusion world models in controlled toy worlds."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
